# projects_hom

./:  README.md  .gitignore  file1.py  file2.py  file3.py  how  mypy.ini  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: file3.py
